...
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/figtree_bold"
            android:text="←"
            android:textColor="@color/ink"
            android:textSize="22sp" />
...
