...
                android:fontFamily="@font/figtree_bold"
                android:text="▦  Also from SMD         ⌄"
                android:textColor="@color/ink"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_chip"
                android:fontFamily="@font/figtree_bold"
                android:gravity="center"
...
